#==============================================================
#  Name: RELEASE_NOTES
#
#  Rem:  This file describes release notes for
#        the ssa IOC Application.
#--------------------------------------------------------------

R1.2.7  16-Dec-2022  M. Dunning (mdunning)
    Add support for 186MHz 7kW SSA for HE gun
    CA1300 7kW: add two new registers for main cpu voltages

R1.2.6  19-Jul-2022  M. Dunning (mdunning)
    Increase drainVoltWait delay based on R&K's recommendation

R1.2.5  15-Jul-2022  M. Dunning (mdunning)
    Increase CA186 module-on retries

R1.2.4  22-Jun-2022  M. Dunning (mdunning)
    Update 7kW archive file
    lerf: Fix incorrect macro

R1.2.3  20-Jun-2022  M. Dunning (mdunning)
    Update external fault messages to include NIRP

R1.2.2  13-Jun-2022  M. Dunning (mdunning)
    Update lerf IOCs

R1.2.1  3-Jun-2022  M. Dunning (mdunning)
    Make seq routine resilient to multiple button pushes
    Rename ssa_modules.py -> make_ssa_module_subs_file.py    

R1.2.0: 25-Apr-2022  M. Dunning (mdunning)
    Merge CA1300 and CA186 seq routines into a single common routine
    Remove unused breakpoint tables

R1.1.14: 15-Apr-2022  M. Dunning (mdunning)
    CA1300 sequencer routine: add retries and an init state; clean up faultReset/powerOn/powerOff states
    Add devSeqCar support

R1.1.13: 24-Mar-2022  M. Dunning (mdunning)
    Add bkhAsyn support; add sioc-b15-ssa6 for b15 beckhoff

R1.1.12: 22-Mar-2022  M. Dunning (mdunning)
    Add CM and cavity PVs
    Add simulated PVs for dev testing

R1.1.11: 17-Mar-2022  M. Dunning (mdunning)
    Add power off routine for all SSAs

R1.1.10: 17-Mar-2022  M. Dunning (mdunning)
    Add access security, default group is MCC.

R1.1.9: 16-Mar-2022  M. Dunning (mdunning)
    Add SRF permit feature, which allows selective enabling/disabling of SSA power on.
            This will be used by the SRF group during commissioning.