@@ -1,10 +1,6 @@
-TOP = ..
+TOP = ../..
 include $(TOP)/configure/CONFIG
 DIRS += $(wildcard *ioc*)
 DIRS += $(wildcard as*)
-DIRS += lerf
-DIRS += cmts
-# Future:
-#DIRS += lcls2
 include $(EPICS_BASE)/configure/RULES_DIRS
 
